--- a/14_JavaScript/index.html
+++ b/14_JavaScript/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <!-- Navbar -->
+    <!-- Navbar with two icon links-->
     <nav class="navbar navbar-default">
         <div class="container-fluid">
         <div class="navbar-header">
@@ -44,7 +44,7 @@
         </div>
     </div>
     
-    <!-- Data Table -->
+    <!-- Data Table with column names -->
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -67,12 +67,12 @@
         </div>
     </div>
 
-    <!-- Footer -->
+    <!-- Footer with text -->
     <footer class="footer">
         <span class="bottom">The Truth is Out There!</span>
     </footer>
 
-    <!-- Javascript reference -->
+    <!-- Javascript data reference -->
     <script src="static/js/data.js" type="text/javascript"></script>
     <script src="static/js/index.js" type="text/javascript"></script>
 
